CON-1466-code review comments changes

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
@@ -36,7 +36,7 @@
                     <option value="">Search for a provider </option>
                     @foreach (var provider in Model.ProviderDto)
                     {
-                        <option value="@provider.ProviderUkprn">@provider.FormattedProviderSuggestion</option>
+                        <option value="@provider.Ukprn">@provider.FormattedProviderSuggestion</option>
                     }
                 </select>
             </div>
