CON-1465-fix-issues-raised-in-testing

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Updated.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Updated.cshtml
@@ -1,7 +1,7 @@
 @model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviderLegalEntities.UpdatedAccountProviderLegalEntityViewModel
 
 @{
-    ViewBag.Title = "Permissions updated";
+    ViewBag.Title = "You’ve successfully changed your training provider’s permissions";
     ViewBag.ZenDeskLabel = "permissions-permissions-updated";
 }
 
