--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Operations/Confirm.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Operations/Confirm.cshtml
@@ -1,7 +1,7 @@
 @model SFA.DAS.ProviderRelationships.Web.ViewModels.Operations.ConfirmOperationViewModel
 
 @{
-    ViewBag.Title = Model.AccountLegalEntity.Name;
+    ViewBag.Title = "Confirm permissions for your training provider";
     ViewBag.ZenDeskLabel = "permissions-confirm-training-provider-permissions";
 }
 
