--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
@@ -1,56 +1,22 @@
 @model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.AddedAccountProviderViewModel
 
 @{
-    ViewBag.Title = "Training provider added";
+    ViewBag.Title = "You've successfully added your training provider";
     ViewBag.ZenDeskLabel = "permissions-training-provider-added";
 }
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        <div aria-labelledby="success-summary-title" class="govuk-success-summary govuk-!-text-align-center" role="alert" tabindex="-1">
-            <h1 class="govuk-heading-xl govuk-!-margin-bottom-2 govuk-!-margin-top-4" id="success-summary-title">
-                Training provider added
-            </h1>
-            <div class="govuk-success-summary__body">
-                <p>You've successfully added <span class="govuk-!-font-weight-bold">@Model.AccountProvider.ProviderName</span></p>
+    <div class="govuk-grid-column-two-thirds">       
+        <div class="govuk-panel govuk-panel--confirmation">
+            <div class="govuk-panel__title">
+                You've successfully added @Model.AccountProvider.ProviderName
             </div>
         </div>
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-            <div class="govuk-form-group @(Html.IsValid(m => m.Choice) ? "" : " govuk-form-group--error")">
-                <fieldset class="govuk-fieldset">
-                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m govuk-!-margin-bottom-0">
-                        <h2 class="govuk-fieldset__heading">
-                            What's next?
-                        </h2>
-                    </legend>
-                    <span class="govuk-error-message">
-                        @Html.ValidationMessageFor(m => m.Choice)
-                    </span>
-                    <div class="govuk-radios">
-                        <div class="govuk-radios__item">
-                            @Html.RadioButtonFor(m => m.Choice, "SetPermissions", new { id = "choice-1", @class = "govuk-radios__input" })
-                            <label class="govuk-label govuk-radios__label" for="choice-1">
-                                Set permissions for this training provider
-                            </label>
-                        </div>
-                        <div class="govuk-radios__item">
-                            @Html.RadioButtonFor(m => m.Choice, "AddTrainingProvider", new { id = "choice-2", @class = "govuk-radios__input" })
-                            <label class="govuk-label govuk-radios__label" for="choice-2">
-                                Add another training provider
-                            </label>
-                        </div>
-                        <div class="govuk-radios__item">
-                            @Html.RadioButtonFor(m => m.Choice, "GoToHomepage", new { id = "choice-3", @class = "govuk-radios__input" })
-                            <label class="govuk-label govuk-radios__label" for="choice-3">
-                                Go back to Homepage
-                            </label>
-                        </div>
-                    </div>
-                </fieldset>
-            </div>
-            <button class="govuk-button" type="submit">Continue</button>
-        }  
+        <h1 class="govuk-heading">What happens next</h1>
+        <p class="govuk-body">You need to set permissions for @Model.AccountProvider.ProviderName so that they can act on your behalf.</p>
+        <p class="govuk-body">You can set permissions in the 'your training providers' section of your account.</p>
+
+        <a class="govuk-button" href="@Url.Action("Index")" role="button">Return to your training providers</a>
     </div>
 </div>
+
