--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Added.cshtml
@@ -6,16 +6,17 @@
 }
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">       
+    <div class="govuk-grid-column-two-thirds">
         <div class="govuk-panel govuk-panel--confirmation">
             <div class="govuk-panel__title">
                 You've successfully added @Model.AccountProvider.ProviderName
             </div>
         </div>
-        <h1 class="govuk-heading">What happens next</h1>
-        <p class="govuk-body">You need to set permissions for @Model.AccountProvider.ProviderName so that they can act on your behalf.</p>
-        <p class="govuk-body">You can set permissions in the 'your training providers' section of your account.</p>
-
+        <h3 class="govuk-heading-m govuk-!-margin-top-7">What happens next</h3>        
+        <div class="govuk-body">
+            <p>You need to set permissions for @Model.AccountProvider.ProviderName so that they can act on your behalf.</p>
+            <p>You can set permissions in the 'your training providers' section of your account.</p>
+        </div>
         <a class="govuk-button" href="@Url.Action("Index")" role="button">Return to your training providers</a>
     </div>
 </div>
