--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
@@ -32,7 +32,7 @@
                 <label class="govuk-label js-hidden" for="Ukprn">
                     UKPRN
                 </label>
-                <select id="Ukprn" name="ProviderUkprn" class="govuk-select">
+                <select id="Ukprn" name="Ukprn" class="govuk-select">
                     <option value="">Search for a provider </option>
                     @foreach (var provider in Model.ProviderDto)
                     {
