CON-1466-fix build

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Find.cshtml
@@ -43,7 +43,7 @@
 
                 <select id="Ukprn" name="Ukprn" class="govuk-select">
                     <option value="">Search for a provider </option>
-                    @foreach (var provider in Model.ProviderDto)
+                    @foreach (var provider in Model.Providers)
                     {
                         <option value="@provider.Ukprn">@provider.FormattedProviderSuggestion</option>
                     }
