--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                 autoselect: true,
                 defaultValue: '',
                 displayMenu: 'overlay',
-                placeholder: 'Start typing to search providers',
+                placeholder: '',
                 onConfirm: function (opt) {
                     var txtInput = document.querySelector('#' + idSelectField);
                     var searchString = opt || txtInput.value;
