Add cookie banner from shared ui package

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,8 @@
         document.body.className = (document.body.className ? document.body.className + ' js-enabled' : 'js-enabled');
     </script>
     <a class="govuk-skip-link" href="#main-content">Skip to main content</a>
-    
+
+    @Html.Partial("_CookieBanner", Html.GetCookieBannerViewModel())
     @Html.Partial("_Header", Html.GetHeaderViewModel())
 
     <div class="govuk-width-container">
