--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Operations/Confirm.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Operations/Confirm.cshtml
@@ -10,46 +10,43 @@
     <a class="govuk-back-link" href="@Model.BackLink">Back</a>
 }
 
-<div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-        <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">Confirm permissions for @Model.AccountProvider.ProviderName</h1>
-    </div>
-    <div class="govuk-grid-column-two-thirds">
-        <p class="govuk-body">These permissions are on behalf of @Model.AccountLegalEntity.Name.</p>
-    </div>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">Confirm permissions for @Model.AccountProvider.ProviderName</h1>
 
-    <div class="govuk-grid-column-two-thirds">
-        @using (Html.BeginForm(new { action = $"{ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]}/providers/{ViewContext.RouteData.Values[RouteValueKeys.AccountProviderId]}/legalentities/{ViewContext.RouteData.Values[RouteValueKeys.AccountLegalEntityId]}/update", controller = "accounts" }))
-        {
-            @Html.AntiForgeryToken()
-            <table class="govuk-table govuk-!-font-size-19">                
-                <tbody class="govuk-table__body">
-                    @for (var i = 0; i < Model.Operations.Count; i++)
-                    {
-                        <tr class="govuk-table__row">
-                            <td class="govuk-table__header">
-                                @Model.Operations[i].Value.GetDescription()
-                            </td>
-                            <td class="govuk-table__cell">
-                                @if (Model.Operations[i].IsEnabled.HasValue && Model.Operations[i].IsEnabled.Value)
-                                {
-                                    @:Allow
-                                }
-                                else
-                                {
-                                    @:Do not allow
-                                }
-                            </td>
-                            <td class="govuk-table__cell">
-                                @Html.ActionLink("Change", "Set", "Operations", new { operationId = (short)Model.Operations[i].Value, IsEditMode = true, IsEnabled = Model.Operations[i].IsEnabled.Value }, null)
-                            </td>
-                        </tr>
-                        @Html.HiddenFor(m => m.Operations[i].Value)
-                        @Html.HiddenFor(m => m.Operations[i].IsEnabled)
-                    }
-                </tbody>
-            </table>
-            <button class="govuk-button" type="submit">Confirm</button>
-        }
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            <p class="govuk-body">These permissions are on behalf of @Model.AccountLegalEntity.Name.</p>
+
+            @using (Html.BeginForm(new { action = $"{ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]}/providers/{ViewContext.RouteData.Values[RouteValueKeys.AccountProviderId]}/legalentities/{ViewContext.RouteData.Values[RouteValueKeys.AccountLegalEntityId]}/update", controller = "accounts" }))
+            {
+                @Html.AntiForgeryToken()
+                <table class="govuk-table">                
+                    <tbody class="govuk-table__body">
+                        @for (var i = 0; i < Model.Operations.Count; i++)
+                        {
+                            <tr class="govuk-table__row">
+                                <th class="govuk-table__header" scope="row">
+                                    @Model.Operations[i].Value.GetDescription()
+                                </th>
+                                <td class="govuk-table__cell">
+                                    @if (Model.Operations[i].IsEnabled.HasValue && Model.Operations[i].IsEnabled.Value)
+                                    {
+                                        @:Allow
+                                    }
+                                    else
+                                    {
+                                        @:Do not allow
+                                    }
+                                </td>
+                                <td class="govuk-table__cell govuk-table__cell--numeric">
+                                    @Html.ActionLink("Change", "Set", "Operations", new { operationId = (short)Model.Operations[i].Value, IsEditMode = true, IsEnabled = Model.Operations[i].IsEnabled.Value }, new { @class = "govuk-link" })
+                                </td>
+                            </tr>
+                            @Html.HiddenFor(m => m.Operations[i].Value)
+                            @Html.HiddenFor(m => m.Operations[i].IsEnabled)
+                        }
+                    </tbody>
+                </table>
+                <button class="govuk-button" type="submit">Confirm</button>
+            }
+        </div>
     </div>
-</div>
