--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Permissions.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Permissions.cshtml
@@ -1,6 +1,4 @@
-﻿@using SFA.DAS.ProviderRelationships.Extensions
-@using SFA.DAS.ProviderRelationships.Web.RouteValues.AccountProviders
-@using SFA.DAS.ProviderRelationships.Types.Models
+﻿@using SFA.DAS.ProviderRelationships.Types.Models
 @model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviderLegalEntities.AccountProviderLegalEntityViewModel
 
 @{
@@ -35,7 +33,7 @@
 
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                     <h2 class="govuk-fieldset__heading">
-                        @Model.Operations[0].Value.GetDisplayName()
+                        Add apprentice records
                     </h2>
                 </legend>
 
@@ -46,13 +44,13 @@
                 <div class="govuk-form-group">
                     <div class="govuk-radios" data-module="radios">
                         <div class="govuk-radios__item">
-                            @Html.RadioButtonFor(m => m.Operations[0].IsEnabled, true, new { id = "operation-0-yes", @class = "govuk-radios__input" })
+                            @Html.RadioButtonFor(m => m.Permissions[0].State, State.Yes, new { id = "operation-0-yes", @class = "govuk-radios__input" })
                             <label class="govuk-label govuk-radios__label" for="operation-0-yes">
                                 Allow
                             </label>
                         </div>
                         <div class="govuk-radios__item">
-                            @Html.RadioButtonFor(m => m.Operations[0].IsEnabled, false, new { id = "operation-0-no", @class = "govuk-radios__input" })
+                            @Html.RadioButtonFor(m => m.Permissions[0].State, State.No, new { id = "operation-0-no", @class = "govuk-radios__input" })
                             <label class="govuk-label govuk-radios__label" for="operation-0-no">
                                 Do not allow
                             </label>
@@ -62,7 +60,7 @@
 
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                     <h2 class="govuk-fieldset__heading">
-                        @Model.Operations[1].Value.GetDisplayName()
+                        Recruit apprentices
                     </h2>
                 </legend>
 
@@ -73,13 +71,19 @@
                 <div class="govuk-form-group">
                     <div class="govuk-radios" data-module="radios">
                         <div class="govuk-radios__item">
-                            @Html.RadioButtonFor(m => m.Operations[1].IsEnabled, true, new { id = "operation-1-yes", @class = "govuk-radios__input" })
+                            @Html.RadioButtonFor(m => m.Permissions[1].State, State.Yes, new { id = "operation-1-yes", @class = "govuk-radios__input" })
                             <label class="govuk-label govuk-radios__label" for="operation-1-yes">
                                 Allow
                             </label>
                         </div>
                         <div class="govuk-radios__item">
-                            @Html.RadioButtonFor(m => m.Operations[1].IsEnabled, false, new { id = "operation-1-no", @class = "govuk-radios__input" })
+                            @Html.RadioButtonFor(m => m.Permissions[1].State, State.Conditional, new { id = "operation-1-conditional", @class = "govuk-radios__input" })
+                            <label class="govuk-label govuk-radios__label" for="operation-1-conditional">
+                                Allow, but I want to review job adverts before they’re advertised
+                            </label>
+                        </div>
+                        <div class="govuk-radios__item">
+                            @Html.RadioButtonFor(m => m.Permissions[1].State, State.No, new { id = "operation-1-no", @class = "govuk-radios__input" })
                             <label class="govuk-label govuk-radios__label" for="operation-1-no">
                                 Do not allow
                             </label>
@@ -92,8 +96,8 @@
             @Html.HiddenFor(m => m.AccountProviderId)
             @Html.HiddenFor(m => m.AccountLegalEntity.Name)
             @Html.HiddenFor(m => m.AccountProvider.ProviderName)
-            @Html.HiddenFor(m => m.Operations[0].Value)
-            @Html.HiddenFor(m => m.Operations[1].Value)
+            @Html.HiddenFor(m => m.Permissions[0].Value)
+            @Html.HiddenFor(m => m.Permissions[1].Value)
 
             <button class="govuk-button" type="submit">Save changes</button>
         }
