--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithSingleOrganisation.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithSingleOrganisation.cshtml
@@ -1,4 +1,5 @@
 ﻿@model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.AccountProvidersViewModel
+@using SFA.DAS.ProviderRelationships.Types.Models
 @using SFA.DAS.ProviderRelationships.Web.RouteValues.AccountProviderLegalEntities
 
 <div class="govuk-grid-column-full">
@@ -25,9 +26,9 @@
                     }
                     else
                     {
-                        foreach (var operation in accountProvider.AccountLegalEntities.First().Operations)
+                        foreach (var permission in accountProvider.AccountLegalEntities.First().Operations.ToPermissions().Where(p => p.State != State.No))
                         {
-                            <span>@operation.GetDescription()</span><br />
+                            <span>@permission.Value.GetDescription()</span><br />
                         }
                     }
                 </td>
