Added confirmation page

--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="apple-touch-icon" href="@Html.CdnLink("assets/images","govuk-apple-touch-icon.png")">
     <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="@Html.CdnLink("assets/images","favicon.ico")" type="image/x-icon" />
     <!--[if !IE 8]><!-->
+    <link href="/Content/css/application.css" rel="stylesheet" />
     <link href="@Html.CdnLink("css", "main.css")" rel="stylesheet" />
     <!--<![endif]-->
     @Html.Partial("_ZenDeskWidget")
