--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Permissions.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Permissions.cshtml
@@ -1,6 +1,4 @@
 ﻿@using SFA.DAS.ProviderRelationships.Extensions
-@using SFA.DAS.ProviderRelationships.Web.RouteValues.AccountProviders
-@using SFA.DAS.ProviderRelationships.Types.Models
 @model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviderLegalEntities.AccountProviderLegalEntityViewModel
 
 @{
@@ -15,11 +13,10 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
         @Html.Partial("_ValidationSummary", ViewData.ModelState)
 
-        @using (Html.BeginForm())
-        {
+        @using (Html.BeginForm(new { action = $"{ViewContext.RouteData.Values[RouteValueKeys.AccountHashedId]}/providers/{ViewContext.RouteData.Values[RouteValueKeys.AccountProviderId]}/legalentities/{ViewContext.RouteData.Values[RouteValueKeys.AccountLegalEntityId]}", controller = "accounts" }))
+                {
             @Html.AntiForgeryToken()
 
             <fieldset class="govuk-fieldset">
@@ -46,13 +43,13 @@
                 <div class="govuk-form-group">
                     <div class="govuk-radios" data-module="radios">
                         <div class="govuk-radios__item">
-                            @Html.RadioButtonFor(m => m.Operations[0].IsEnabled, true, new { id = "operation-0-yes", @class = "govuk-radios__input" })
+                            @Html.RadioButtonFor(m => m.Operations[0].IsEnabled, true, new {id = "operation-0-yes", @class = "govuk-radios__input"})
                             <label class="govuk-label govuk-radios__label" for="operation-0-yes">
                                 Allow
                             </label>
                         </div>
                         <div class="govuk-radios__item">
-                            @Html.RadioButtonFor(m => m.Operations[0].IsEnabled, false, new { id = "operation-0-no", @class = "govuk-radios__input" })
+                            @Html.RadioButtonFor(m => m.Operations[0].IsEnabled, false, new {id = "operation-0-no", @class = "govuk-radios__input"})
                             <label class="govuk-label govuk-radios__label" for="operation-0-no">
                                 Do not allow
                             </label>
@@ -73,13 +70,13 @@
                 <div class="govuk-form-group">
                     <div class="govuk-radios" data-module="radios">
                         <div class="govuk-radios__item">
-                            @Html.RadioButtonFor(m => m.Operations[1].IsEnabled, true, new { id = "operation-1-yes", @class = "govuk-radios__input" })
+                            @Html.RadioButtonFor(m => m.Operations[1].IsEnabled, true, new {id = "operation-1-yes", @class = "govuk-radios__input"})
                             <label class="govuk-label govuk-radios__label" for="operation-1-yes">
                                 Allow
                             </label>
                         </div>
                         <div class="govuk-radios__item">
-                            @Html.RadioButtonFor(m => m.Operations[1].IsEnabled, false, new { id = "operation-1-no", @class = "govuk-radios__input" })
+                            @Html.RadioButtonFor(m => m.Operations[1].IsEnabled, false, new {id = "operation-1-no", @class = "govuk-radios__input"})
                             <label class="govuk-label govuk-radios__label" for="operation-1-no">
                                 Do not allow
                             </label>
@@ -94,6 +91,7 @@
             @Html.HiddenFor(m => m.AccountProvider.ProviderName)
             @Html.HiddenFor(m => m.Operations[0].Value)
             @Html.HiddenFor(m => m.Operations[1].Value)
+            @Html.HiddenFor(m => m.NoOfProviderCreatedVacancies)
 
             <button class="govuk-button" type="submit">Save changes</button>
         }
