--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithSingleOrganisation.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithSingleOrganisation.cshtml
@@ -1,4 +1,5 @@
 ﻿@model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.AccountProvidersViewModel
+@using SFA.DAS.ProviderRelationships.Extensions
 @using SFA.DAS.ProviderRelationships.Web.RouteValues.AccountProviderLegalEntities
 
 <div class="govuk-grid-column-full">
@@ -27,14 +28,14 @@
                     {
                         foreach (var operation in accountProvider.AccountLegalEntities.First().Operations)
                         {
-                            <span>@operation.GetDescription()</span><br />
+                            <span>@operation.GetDisplayName()</span><br />
                         }
                     }
                 </td>
                 @if (Model.IsUpdatePermissionsOperationAuthorized)
                 {
                     <td class="govuk-table__cell govuk-table__cell--numeric das-table-cell-width-20">
-                        <a class="govuk-link govuk-link--no-visited-state" href="@Url.Action("Permissions", "AccountProviderLegalEntities", new AccountProviderLegalEntityRouteValues { AccountProviderId = accountProvider.Id, AccountLegalEntityId = accountProvider.AccountLegalEntities.First().Id })">
+                        <a class="govuk-link govuk-link--no-visited-state" href="@Url.Action("Permissions", "AccountProviderLegalEntities", new AccountProviderLegalEntityRouteValues { AccountHashedId = Model.AccountHashedId, AccountProviderId = accountProvider.Id, AccountLegalEntityId = accountProvider.AccountLegalEntities.First().Id })">
                             @if (accountProvider.AccountLegalEntities.First().Operations.Count == 0)
                             {
                                 @:Set permissions
