--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/Get.cshtml
@@ -1,3 +1,4 @@
+@using SFA.DAS.ProviderRelationships.Extensions
 @using SFA.DAS.ProviderRelationships.Web.RouteValues.AccountProviderLegalEntities
 @model SFA.DAS.ProviderRelationships.Web.ViewModels.AccountProviders.GetAccountProviderViewModel
 
@@ -44,7 +45,7 @@
                                 <ul class="govuk-list das-list--comma-after govuk-body govuk-!-margin-bottom-0">
                                     @foreach (var operation in accountLegalEntity.Operations)
                                     {
-                                        <li>@operation.GetDescription()</li>
+                                        <li>@operation.GetDisplayName()</li>
                                     }
                                 </ul>
                             }
@@ -56,7 +57,7 @@
                         @if (Model.IsUpdatePermissionsOperationAuthorized)
                         {
                             <td class="govuk-table__cell">
-                                <a href="@Url.Action("Permissions", "AccountProviderLegalEntities", new AccountProviderLegalEntityRouteValues { AccountProviderId = Model.AccountProvider.Id, AccountLegalEntityId = accountLegalEntity.Id })">Set permissions</a>
+                                <a href="@Url.Action("Permissions", "AccountProviderLegalEntities", new AccountProviderLegalEntityRouteValues { AccountHashedId = Model.AccountHashedId, AccountProviderId = Model.AccountProvider.Id, AccountLegalEntityId = accountLegalEntity.Id })">Set permissions</a>
                             </td>
                         }
                     </tr>
