--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Permissions.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviderLegalEntities/Permissions.cshtml
@@ -92,6 +92,7 @@
             @Html.HiddenFor(m => m.Operations[0].Value)
             @Html.HiddenFor(m => m.Operations[1].Value)
             @Html.HiddenFor(m => m.NoOfProviderCreatedVacancies)
+            @Html.HiddenFor(m => m.IsProviderBlockedFromRecruit)
 
             <button class="govuk-button" type="submit">Save changes</button>
         }
