--- a/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithSingleOrganisation.cshtml
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/AccountProviders/AccountProvidersWithSingleOrganisation.cshtml
@@ -35,7 +35,7 @@
                 @if (Model.IsUpdatePermissionsOperationAuthorized)
                 {
                     <td class="govuk-table__cell govuk-table__cell--numeric das-table-cell-width-20">
-                        <a class="govuk-link govuk-link--no-visited-state" href="@Url.Action("Permissions", "AccountProviderLegalEntities", new AccountProviderLegalEntityRouteValues { AccountHashedId = Model.AccountHashedId, AccountProviderId = accountProvider.Id, AccountLegalEntityId = accountProvider.AccountLegalEntities.First().Id })">
+                        <a class="govuk-link govuk-link--no-visited-state" href="@Url.Action("Permissions", "AccountProviderLegalEntities", new AccountProviderLegalEntityRouteValues { AccountProviderId = accountProvider.Id, AccountLegalEntityId = accountProvider.AccountLegalEntities.First().Id })">
                             @if (accountProvider.AccountLegalEntities.First().Operations.Count == 0)
                             {
                                 @:Set permissions
